# Lab-flightboard

./: .gitignore  README.md  pyproject.toml  serve.bat  start-billboard.bat
docs/: billboard.md  config_reference.md  deployment_raspberry_pi.md  field_extraction.md
examples/: billboard_app.py  billboard_config.example.json  billboard_config.minimal.json  config_builder.html  dev_server.py  equipment_config.json  inspect_calendar.py  parse_multiple_calendars.py  parse_single_calendar.py
lab_flightboard/: __init__.py  billboard.py  billboard_config.py  equipment_config.py  exceptions.py  ical_parser.py  models.py
tests/: test_billboard.py  test_billboard_app.py  test_ical_parser.py
tests/fixtures/: sample_calendar.ics
