[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lab-flightboard"
version = "0.1.0"
description = "Airport-style dashboard for lab equipment bookings, instrument status, and incident alerts."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "icalendar>=5.0",
    "recurring-ical-events>=3.0",
    "python-dateutil>=2.8",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["lab_flightboard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
